<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_tui_launcher</name>
  <version>0.1.0</version>
  <description>FTXUI-based TUI for launching, monitoring, and managing ROS 2 nodes</description>
  <maintainer email="selvakumar@todo.com">Selvakumar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rosgraph_msgs</depend>

  <depend>yaml-cpp</depend>
  <depend>spdlog</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
